apps/base/whoami/ingressroute-redirect.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.amajor.cloud`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: redirect-to-https
