apps/base/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-secure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.mhtx.net`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: porkbun
